Refactor: add comments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-server.port=8080
-
-logging.level.org.springframework=WARN
+###### Logging ######
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=WARN
-
 ####### Data-Source Properties #######
-spring.datasource.url=jdbc:mysql://localhost:3306/herodb
+spring.datasource.hikari.initialization-fail-timeout=0
+spring.datasource.url=jdbc:mysql://hero-db:3306/herodb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-
 ###### JPA Properties ######
 #TODO: Remove this Bean after development completed
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
