--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=WARN
 ####### Data-Source Properties #######
 spring.datasource.hikari.initialization-fail-timeout=0
-spring.datasource.url=jdbc:mysql://hero-db:3306/herodb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/herodb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 ###### JPA Properties ######
